# portview

./: .gitignore  CMakeLists.txt  LICENSE  PLAN.md  README.md  TODO.md  main.cpp  resource.rc
.github/workflows/: release.yml
include/: data_models.h  firewall.h  network_tables.h  process_resolver.h  ui_renderer.h  utils.h
src/: firewall.cpp  main.cpp  network_tables.cpp  process_resolver.cpp  ui_renderer.cpp  utils.cpp
